--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,7 @@
 
 version: build{build}
 image: Visual Studio 2017
-clone_folder: C:\CKli-World\SimpleGitVersion\SGV-Net
+clone_folder: C:\CKli-World\CK-Build\SGV-Net
 branches:
   only:
     - master
