--- a/SimpleGitVersion.Core/SimpleGitVersion.Core.csproj
+++ b/SimpleGitVersion.Core/SimpleGitVersion.Core.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <Import Project="..\Common\Shared.props" />
   <PropertyGroup>
     <TargetFrameworks>net461;netstandard2.0</TargetFrameworks>
@@ -7,7 +7,7 @@
     <PackageTags>Versioning, SemVer, NuGet, CSemVer, InformationalVersion</PackageTags>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CSemVer" Version="6.0.1--0002-develop" />
+    <PackageReference Include="CSemVer" Version="7.0.0" />
     <PackageReference Include="LibGit2Sharp" Version="0.26.1" />
   </ItemGroup>
 </Project>
