--- a/SimpleGitVersion.Core/SimpleGitVersion.Core.csproj
+++ b/SimpleGitVersion.Core/SimpleGitVersion.Core.csproj
@@ -7,7 +7,7 @@
     <PackageTags>Versioning, SemVer, NuGet, CSemVer, InformationalVersion</PackageTags>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CSemVer" Version="7.0.2--0004-develop" />
+    <PackageReference Include="CSemVer" Version="7.0.2" />
     <PackageReference Include="LibGit2Sharp" Version="0.26.1" />
   </ItemGroup>
 </Project>
