--- a/SimpleGitVersion.Cake/SimpleGitVersion.Cake.csproj
+++ b/SimpleGitVersion.Cake/SimpleGitVersion.Cake.csproj
@@ -14,6 +14,6 @@
     <ProjectReference Include="../SimpleGitVersion.Core/SimpleGitVersion.Core.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Code.Cake" Version="3.0.0-a" />
+    <PackageReference Include="Code.Cake" Version="3.0.0" />
   </ItemGroup>
 </Project>
