--- a/SimpleGitVersion.Cake/SimpleGitVersion.Cake.csproj
+++ b/SimpleGitVersion.Cake/SimpleGitVersion.Cake.csproj
@@ -14,6 +14,6 @@
     <ProjectReference Include="../SimpleGitVersion.Core/SimpleGitVersion.Core.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Code.Cake" Version="3.0.1" />
+    <PackageReference Include="Code.Cake" Version="3.0.2--0001-develop" />
   </ItemGroup>
 </Project>
