--- a/Common/Shared.props
+++ b/Common/Shared.props
@@ -1,11 +1,9 @@
 <Project>
 
-  <!--<BasicDefinitions>: It is useful to knwow whether we are in the Tests/ folder and/or if the current project is a Test.-->
+  <!--<BasicDefinitions>: provides simple and useful definitions.-->
   <PropertyGroup>
-    <IsTestProject Condition="$(MSBuildProjectName.EndsWith('.Tests'))">true</IsTestProject>
-    <IsInTestsFolder Condition="$(MSBuildProjectDirectoryNoRoot.Contains('\Tests\'))">true</IsInTestsFolder>
     <!-- SolutionDir is defined by Visual Studio, we unify the behavior here. -->
-    <SolutionDir Condition=" $(SolutionDir) == '' ">$([System.IO.Path]::GetDirectoryName($([System.IO.Path]::GetDirectoryName($(MSBuildThisFileDirectory)))))\</SolutionDir>
+    <SolutionDir Condition=" $(SolutionDir) == '' ">$([System.IO.Path]::GetDirectoryName($([System.IO.Path]::GetDirectoryName($(MSBuildThisFileDirectory)))))/</SolutionDir>
     <!-- CakeBuild is obsolete: the new standard ContinuousIntegrationBuild should be used. -->
     <ContinuousIntegrationBuild Condition=" '$(CakeBuild)' == 'true' ">true</ContinuousIntegrationBuild>
     <!-- Always enable Deterministic build. -->
@@ -15,10 +13,13 @@
     <!-- InformationalVersion is either the Zero version or provided by the CodeCakeBuilder when in CI build). -->
     <IncludeSourceRevisionInInformationalVersion>false</IncludeSourceRevisionInInformationalVersion>
     <!-- Always embedds the .pdb in the nuget package.
-       When using SourceLink, we should follow the guidelines here: https://github.com/dotnet/sourcelink#using-source-link-in-net-projects
-       (for packages that are ultimately uploaded to nuget.org). -->
+       TODO: When using SourceLink, we should follow the guidelines here: https://github.com/dotnet/sourcelink#using-source-link-in-net-projects
+             (only for packages that are ultimately uploaded to nuget.org). -->
     <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
   </PropertyGroup>
+  <ItemGroup>
+    <SourceRoot Include="$(SolutionDir)" />
+  </ItemGroup>
   <!--</BasicDefinitions>-->
 
   <!--<StandardProperties>-->
