--- a/Tests/SimpleGitVersion.Core.Tests/SimpleGitVersion.Core.Tests.csproj
+++ b/Tests/SimpleGitVersion.Core.Tests/SimpleGitVersion.Core.Tests.csproj
@@ -2,17 +2,15 @@
   <Import Project="..\..\Common\Shared.props" />
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <IsPackable>False</IsPackable>
+    <IsPackable>false</IsPackable>
+    <GenerateDocumentationFile>false</GenerateDocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="../../SimpleGitVersion.Core/SimpleGitVersion.Core.csproj" />
     <PackageReference Include="FluentAssertions" Version="5.10.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
     <PackageReference Include="NUnit" Version="3.12.0" />
-    <PackageReference Include="NUnit3TestAdapter" Version="3.16.1">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
+    <PackageReference Include="NUnit3TestAdapter" Version="3.16.1" PrivateAssets="all"  />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
