Nullable reference type enabled.
This support forced us to upgrade to netstandard2.1 in order to
reference CSemVer that is now netstandard2.1 since it uses nullable
attributes like [AllowNull].
This is a Breaking change and the public API has changed, for instance
CIReleaseInfo.BaseTag is no a SVersion instead of a CSVersion.
The edge case when a CI build has no base tag now generates an
InformationalVersion with the commit sha and date.

--- a/SimpleGitVersion.Core/SimpleGitVersion.Core.csproj
+++ b/SimpleGitVersion.Core/SimpleGitVersion.Core.csproj
@@ -1,13 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <Import Project="..\Common\Shared.props" />
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <Description></Description>
     <PackageIconUrl>https://raw.githubusercontent.com/SimpleGitVersion/SGV-Net/master/SimpleGitVersion.png</PackageIconUrl>
     <PackageTags>Versioning, SemVer, NuGet, CSemVer, InformationalVersion</PackageTags>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CSemVer" Version="7.0.3--0004-develop" />
+    <PackageReference Include="CSemVer" Version="7.0.3--0005-develop" />
     <PackageReference Include="LibGit2Sharp" Version="0.26.2" />
   </ItemGroup>
 </Project>
