--- a/SimpleGitVersion.Core/SimpleGitVersion.Core.csproj
+++ b/SimpleGitVersion.Core/SimpleGitVersion.Core.csproj
@@ -1,19 +1,19 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <Import Project="..\Common\Shared.props" />
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <Description>Simple Git Version implementation based on LibGit2Sharp.</Description>
-    <PackageIcon>SimpleGitVersion.png</PackageIcon>
+    <PackageIcon>../SimpleGitVersion.png</PackageIcon>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageTags>Versioning, SemVer, NuGet, CSemVer, InformationalVersion, Build, LibGit2Sharp</PackageTags>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="SimpleGitVersion.png" Pack="true" PackagePath=""/>
+    <None Include="../SimpleGitVersion.png" Pack="true" PackagePath=""/>
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="CSemVer" Version="8.0.0" />
     <PackageReference Include="LibGit2Sharp" Version="0.26.2" />
     <ProjectReference Include="..\SimpleGitVersion.Abstractions\SimpleGitVersion.Abstractions.csproj" />
   </ItemGroup>
