--- a/SimpleGitVersion.Abstractions/SimpleGitVersion.Abstractions.csproj
+++ b/SimpleGitVersion.Abstractions/SimpleGitVersion.Abstractions.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <Description>Minimal Simple Git Version abstraction that enables to reason on new versions and configure a build.</Description>
-    <PackageIcon>../SimpleGitVersion.png</PackageIcon>
+    <PackageIcon>SimpleGitVersion.png</PackageIcon>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageTags>Versioning, SemVer, NuGet, CSemVer, InformationalVersion, Build</PackageTags>
     <Nullable>enable</Nullable>
