--- a/SimpleGitVersion.Core/SimpleGitVersion.Core.csproj
+++ b/SimpleGitVersion.Core/SimpleGitVersion.Core.csproj
@@ -1,9 +1,9 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <Import Project="..\Common\Shared.props" />
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <Description>Simple Git Version implementation based on LibGit2Sharp.</Description>
-    <PackageIcon>../SimpleGitVersion.png</PackageIcon>
+    <PackageIcon>SimpleGitVersion.png</PackageIcon>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageTags>Versioning, SemVer, NuGet, CSemVer, InformationalVersion, Build, LibGit2Sharp</PackageTags>
     <Nullable>enable</Nullable>
