--- a/SimpleGitVersion.Abstractions/SimpleGitVersion.Abstractions.csproj
+++ b/SimpleGitVersion.Abstractions/SimpleGitVersion.Abstractions.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <Import Project="..\Common\Shared.props" />
   <PropertyGroup>
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="CSemVer" Version="8.0.0" />
+    <PackageReference Include="CSemVer" Version="8.0.1" />
   </ItemGroup>
 
 </Project>
