--- a/SimpleGitVersion.Abstractions/SimpleGitVersion.Abstractions.csproj
+++ b/SimpleGitVersion.Abstractions/SimpleGitVersion.Abstractions.csproj
@@ -1,5 +1,4 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <Import Project="..\Common\Shared.props" />
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
@@ -9,13 +8,10 @@
     <PackageTags>Versioning, SemVer, NuGet, CSemVer, InformationalVersion, Build</PackageTags>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
   <ItemGroup>
-    <None Include="../SimpleGitVersion.png" Pack="true" PackagePath=""/>
+    <None Include="../SimpleGitVersion.png" Pack="true" PackagePath="" />
   </ItemGroup>
-
   <ItemGroup>
-    <PackageReference Include="CSemVer" Version="8.0.1" />
+    <PackageReference Include="CSemVer" Version="8.0.2--0001-develop" />
   </ItemGroup>
-
 </Project>
