CI build: Upgrading dependencies:
NuGet:CSemVer/8.0.2--0022-develop
NuGet:Code.Cake/4.0.1--0002-develop.

--- a/SimpleGitVersion.Cake/SimpleGitVersion.Cake.csproj
+++ b/SimpleGitVersion.Cake/SimpleGitVersion.Cake.csproj
@@ -16,6 +16,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="../SimpleGitVersion.Core/SimpleGitVersion.Core.csproj" />
-    <PackageReference Include="Code.Cake" Version="4.0.0" />
+    <PackageReference Include="Code.Cake" Version="4.0.1--0002-develop" />
   </ItemGroup>
 </Project>
