--- a/.gitignore
+++ b/.gitignore
@@ -260,3 +260,5 @@ Tests/**/CKSetup-WorkingDir/
 CodeCakeBuilder/MemoryKey.*.txt
 CodeCakeBuilder/UnitTestsDone.*.txt
 /Tests/ThisRepoDevDepth5/
+
+$StObjGen/
