Manual fix of .gitignore before submodule commit.

--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,6 @@ Tests/**/CKSetup-WorkingDir/
 
 CodeCakeBuilder/MemoryKey.*.txt
 CodeCakeBuilder/UnitTestsDone.*.txt
+/Tests/ThisRepoDevDepth5/
+
+$StObjGen/
