CI build: Upgrading dependencies:
NuGet:CSemVer/9.0.5--0001-develop
NuGet:Code.Cake/5.0.1--0001-develop.

--- a/SimpleGitVersion.Abstractions/SimpleGitVersion.Abstractions.csproj
+++ b/SimpleGitVersion.Abstractions/SimpleGitVersion.Abstractions.csproj
@@ -12,6 +12,6 @@
     <None Include="../SimpleGitVersion.png" Pack="true" PackagePath="" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="CSemVer" Version="9.0.0" />
+    <PackageReference Include="CSemVer" Version="9.0.5--0001-develop" />
   </ItemGroup>
 </Project>
