CI build: Upgrading dependencies:
NuGet:CSemVer/9.0.5--0002-develop
NuGet:Code.Cake/5.0.1--0002-develop.

--- a/Common/Shared.props
+++ b/Common/Shared.props
@@ -71,4 +71,10 @@
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
   <!--</SourceLinkDebuggingWorkaround>-->
+
+  <!--<SPDXLicense>: See https://docs.microsoft.com/en-us/nuget/reference/msbuild-targets#packing-a-license-expression-or-a-license-file and https://spdx.org/licenses/ -->
+  <PropertyGroup>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+  </PropertyGroup>
+  <!--</SPDXLicense>-->
 </Project>
