--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,6 @@
 # Build results
 [Dd]ebug/
 [Dd]ebugPublic/
-[Rr]elease/
-[Rr]eleases/
 x64/
 x86/
 bld/
@@ -262,3 +260,5 @@ CodeCakeBuilder/UnitTestsDone.*.txt
 /Tests/ThisRepoDevDepth5/
 
 $StObjGen/
+CodeCakeBuilder/[Rr]elease/
+CodeCakeBuilder/[Rr]eleases/
