Releasing 6.0.0-r. Upgrading release dependencies: NuGet:CSemVer/10.0.0, NuGet:Code.Cake/6.0.0-r.

--- a/SimpleGitVersion.Abstractions/SimpleGitVersion.Abstractions.csproj
+++ b/SimpleGitVersion.Abstractions/SimpleGitVersion.Abstractions.csproj
@@ -7,6 +7,6 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CSemVer" Version="10.0.0-a00-00-0002-develop" />
+    <PackageReference Include="CSemVer" Version="10.0.0" />
   </ItemGroup>
 </Project>
