[Breaking] Exposes ThisReleaseTag.
Instead of just the ReleaseTag version.

--- a/Common/Shared.props
+++ b/Common/Shared.props
@@ -80,7 +80,7 @@
   </PropertyGroup>
   <!--</SPDXLicense>-->
 
-  <!--<Analyzers>-->
+  <!--<Analyzers>: This analyzer provides very welcome guidelines about async and threading issues.-->
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Threading.Analyzers" Version="17.0.64" PrivateAssets="All" IncludeAssets="runtime;build;native;contentfiles;analyzers" />
   </ItemGroup>
