--- a/CodeCakeBuilder/CodeCakeBuilder.csproj
+++ b/CodeCakeBuilder/CodeCakeBuilder.csproj
@@ -9,7 +9,7 @@
     <PackageReference Include="NuGet.Credentials" Version="6.0.0" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Core" Version="15.0.0-r03" />
+    <PackageReference Include="CK.Core" Version="15.0.0-r04-01" />
     <ProjectReference Include="../SimpleGitVersion.Cake/SimpleGitVersion.Cake.csproj" />
   </ItemGroup>
 </Project>
