--- a/SimpleGitVersion.Abstractions/SimpleGitVersion.Abstractions.csproj
+++ b/SimpleGitVersion.Abstractions/SimpleGitVersion.Abstractions.csproj
@@ -6,6 +6,6 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CSemVer" Version="10.1.1--0010-develop" />
+    <PackageReference Include="CSemVer" Version="11.0.0" />
   </ItemGroup>
 </Project>
