--- a/SimpleGitVersion.Cake/SimpleGitVersion.Cake.csproj
+++ b/SimpleGitVersion.Cake/SimpleGitVersion.Cake.csproj
@@ -10,6 +10,6 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="../SimpleGitVersion.Core/SimpleGitVersion.Core.csproj" />
-    <PackageReference Include="Code.Cake" Version="7.0.0" />
+    <PackageReference Include="Code.Cake" Version="7.0.1--0000-develop" />
   </ItemGroup>
 </Project>
