--- a/SimpleGitVersion.Core/SimpleGitVersion.Core.csproj
+++ b/SimpleGitVersion.Core/SimpleGitVersion.Core.csproj
@@ -1,12 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <Description>Simple Git Version implementation based on LibGit2Sharp.</Description>
     <PackageTags>Versioning, SemVer, NuGet, CSemVer, InformationalVersion, Build, LibGit2Sharp</PackageTags>
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="LibGit2Sharp" Version="0.26.2" />
+    <PackageReference Include="LibGit2Sharp" Version="0.27.2" />
     <ProjectReference Include="..\SimpleGitVersion.Abstractions\SimpleGitVersion.Abstractions.csproj" />
   </ItemGroup>
 </Project>
